ros2_ws/log/build_2023-10-19_15-33-36/py_srvcli/stderr.log
  File "/home/wyatt/ros2_ws/install/py_srvcli/lib/python3.10/site-packages/py_srvcli/client_member_function.py", line 48
    if __name__ = '__main__':
       ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Maybe you meant '==' or ':=' instead of '='?

